Apply the more robust fix for 6449933 to dolphin and 6ux

XMLWordPrintable

    • b66
    • x86
    • windows_vista
    • Verified

        6449933 was fixed for mustang and then backported to 5.0u11. The 5.0u11 version is a more robust fix. It should be applied to dolphin and 6ux. See the fix here:

        http://javaweb.sfbay/jcg/5.0u11/swing/6449933/

              Assignee:
              Pavel Porvatov (Inactive)
              Reporter:
              Shannon Hickey (Inactive)
              Votes:
              0 Vote for this issue
              Watchers:
              0 Start watching this issue

                Created:
                Updated:
                Resolved:
                Imported:
                Indexed: