6489447: Apply the more robust fix for 6449933 to dolphin and 6ux

Reviewed-by: malenkov